--- a/css/global.css
+++ b/css/global.css
@@ -11,6 +11,7 @@ html {
 }
 
 body, #root {
+  background: var(--color-background);
   height: 100%;
 }
 
@@ -183,27 +184,36 @@ input[type="radio"] {
 .App-header {
   background: #333;
   display: flex;
-  padding: .4em .8em;
+  height: 2.6rem;
+  padding: 0;
   position: fixed;
   width: 100%;
 }
 
 .App-title {
-  font-size: 1.2em;
+  font-size: 1.4rem;
   font-weight: normal;
   letter-spacing: .1em;
+  line-height: 1.4rem;
+  padding: .6rem 1.2rem;
   margin: 0 auto 0 0;
   text-transform: uppercase;
-
 }
 
-.App-header .icon-cog {
-  height: 1.2em;
-  width: 1.2em;
+.Game-settings-toggle svg {
+  cursor: pointer;
+  height: 2.6rem;
+  padding: .6rem ;
+  width: 2.6rem;
 }
 
-.App-header .icon-cog path {
+.Game-settings-toggle svg path {
   fill: white;
+  transition: fill .05s ease-in-out;
+}
+
+.Game-settings-toggle:hover svg path {
+  fill: var(--color-background);
 }
 
 .New-game-display,
@@ -235,6 +245,35 @@ input[type="radio"] {
 .App-footer button {
   font-size: 1em;
   margin: 0;
+}
+
+.App-settings {
+  background: #444;
+  height: 100%;
+  margin-top: 2.6rem;
+  padding: 1em;
+  position: fixed;
+  right: -18rem;
+  transition: right .2s ease-in-out;
+  width: 18rem;
+  z-index: 5;
+}
+
+.App.settings-menu-open .App-settings {
+  right: 0;
+}
+
+.App-settings h2 {
+  font-weight: normal;
+  margin: 0 0 1em;
+}
+
+.App-settings label {
+  font-weight: normal;
+}
+
+.App-settings input[type="submit"] {
+  margin: 2em 0;
 }
 
 .Score-board h3 {
