--- a/css/global.css
+++ b/css/global.css
@@ -40,7 +40,6 @@ input[type="button"] {
   font-size: .9em;
   font-weight: normal;
   line-height: 1.2em;
-  letter-spacing: .1rem;
   text-decoration: none;
   white-space: nowrap;
   background-color: transparent;
@@ -53,43 +52,20 @@ input[type="button"] {
   overflow: hidden;
 }
 
+.button-small {
+  height: 1.7em;
+  font-size: .7em;
+  line-height: 1.2em;
+  padding: .4em;
+}
+
 .button:hover,
 button:hover,
 input[type="submit"]:hover,
 input[type="reset"]:hover,
-input[type="button"]:hover,
-.button:focus,
-button:focus,
-input[type="submit"]:focus,
-input[type="reset"]:focus,
-input[type="button"]:focus {
+input[type="button"]:hover {
   background-color: rgba(255,255,255,.2);
   outline: 0; 
-}
-
-.button.button-primary,
-button.button-primary,
-input[type="submit"].button-primary,
-input[type="reset"].button-primary,
-input[type="button"].button-primary {
-  color: #FFF;
-  background-color: #33C3F0;
-  border-color: #33C3F0; 
-}
-
-.button.button-primary:hover,
-button.button-primary:hover,
-input[type="submit"].button-primary:hover,
-input[type="reset"].button-primary:hover,
-input[type="button"].button-primary:hover,
-.button.button-primary:focus,
-button.button-primary:focus,
-input[type="submit"].button-primary:focus,
-input[type="reset"].button-primary:focus,
-input[type="button"].button-primary:focus {
-  color: #FFF;
-  background-color: #1EAEDB;
-  border-color: #1EAEDB; 
 }
 
 input[type="email"],
@@ -308,6 +284,16 @@ input[type="radio"] {
 .Score-board .player-score {
   font-size: 1.2em;
   display: block;
+}
+
+.Score-board .player-score-buttons {
+  margin: .5em 0 .2em;
+  opacity: .3;
+}
+
+.Score-board .player-score-buttons button:hover {
+  background: transparent;
+  cursor: default;
 }
 
 .Score-board .current-player {
