--- a/public/css/global.css
+++ b/public/css/global.css
@@ -149,7 +149,6 @@ input[type="radio"] {
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
 .App {
-  background: var(--color-background);
   color: white;
   height: 100%;
   font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
@@ -195,13 +194,25 @@ input[type="radio"] {
 .New-game-display,
 .Question-display,
 .Gameover-display {
-  margin-bottom: 3em;
+  height: 100%;
 }
 
 .App-content {
+  height: 100%;
+}
+
+.app-content-inside {
+  max-width: 24em;
   margin: 0 auto;
-  max-width: 50em;
   padding: 3em 1em 3em;
+}
+
+.App-content.questions {
+  margin-bottom: 3em; /* To account for scoreboard */
+}
+
+.App-content.scoring {
+  background: #38a551;
 }
 
 .turn-notice {
@@ -269,8 +280,6 @@ input[type="radio"] {
 }
 
 .Score-board li {
-  border: 1px solid white;
-  border-radius: 4px;
   margin: 0 .3em;
   padding: .4em 1em;
   text-align: center;
@@ -309,4 +318,22 @@ input[type="radio"] {
 .Category-selection button,
 .Question .category {
   text-transform: capitalize;
+}
+
+
+.Scoring-display ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.Scoring-display li {
+  font-size: 1.2em;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 1em;
+}
+
+.Scoring-display .scoring-name {
+  margin: 0 auto;
 }
