--- a/public/css/global.css
+++ b/public/css/global.css
@@ -16,11 +16,12 @@ body, #root {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  margin-bottom: .5em;
+  margin: .8em 0 .3em;
 }
 
 p {
   margin-top: 0;
+  margin-bottom: .5em;
 }
 
 /* Forms & buttons
@@ -202,7 +203,7 @@ input[type="radio"] {
 }
 
 .app-content-inside {
-  max-width: 24em;
+  max-width: 30em;
   margin: 0 auto;
   padding: 3em 1em 3em;
 }
@@ -212,7 +213,6 @@ input[type="radio"] {
 }
 
 .App-content.scoring {
-  background: #38a551;
 }
 
 .turn-notice {
@@ -336,4 +336,73 @@ input[type="radio"] {
 
 .Scoring-display .scoring-name {
   margin: 0 auto;
+}
+
+
+.score-slider {
+  -webkit-appearance: none;
+  background: rgba(255,255,255,.4);
+  border-radius: 3px;
+  height: 25px;
+  margin: 1em 0 2em;
+  opacity: .8;
+  outline: none;
+  transition: background .1s;
+  width: 100%;
+}
+  
+.score-slider:hover {
+  background: rgba(255,255,255,.5);
+}
+
+.score-slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  border: 1px solid white;
+  border-radius: 3px;
+  box-shadow: 0 0 10px 2px rgba(255,255,255,.4);
+  appearance: none;
+  width: 25px;
+  height: 25px;
+  background: rgba(255, 255, 255, .9);
+  cursor: pointer;
+  transition: background .2s;
+}
+
+.score-slider::-moz-range-thumb {
+  border: 1px solid white;
+  border-radius: 3px;
+  box-shadow: 0 0 10px 2px rgba(255,255,255,.7);
+  width: 25px;
+  height: 25px;
+  background: rgba(255, 255, 255, .9);
+  cursor: pointer;
+  transition: background .2s;
+}
+
+.score-slider.positive::-webkit-slider-thumb {
+  background: #1ac54e;
+}
+.score-slider.negative::-webkit-slider-thumb {
+  background: #f07373;
+}
+
+.scoring-name {
+  text-align: center;
+}
+
+.scores {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  color: rgba(255,255,255,.7);
+}
+  
+.scores span:nth-of-type(2) {
+  text-align: center;
+}
+.scores span:nth-of-type(3) {
+  text-align: right;
+}
+
+.Question button {
+  margin-top: 1em;
 }
