--- a/css/global.css
+++ b/css/global.css
@@ -16,11 +16,12 @@ body, #root {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  margin-bottom: .5em;
+  margin: .8em 0 .3em;
 }
 
 p {
   margin-top: 0;
+  margin-bottom: .5em;
 }
 
 /* Forms & buttons
@@ -149,7 +150,6 @@ input[type="radio"] {
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
 .App {
-  background: var(--color-background);
   color: white;
   height: 100%;
   font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
@@ -195,13 +195,24 @@ input[type="radio"] {
 .New-game-display,
 .Question-display,
 .Gameover-display {
-  margin-bottom: 3em;
+  height: 100%;
 }
 
 .App-content {
+  height: 100%;
+}
+
+.app-content-inside {
+  max-width: 30em;
   margin: 0 auto;
-  max-width: 50em;
   padding: 3em 1em 3em;
+}
+
+.App-content.questions {
+  margin-bottom: 3em; /* To account for scoreboard */
+}
+
+.App-content.scoring {
 }
 
 .turn-notice {
@@ -269,8 +280,6 @@ input[type="radio"] {
 }
 
 .Score-board li {
-  border: 1px solid white;
-  border-radius: 4px;
   margin: 0 .3em;
   padding: .4em 1em;
   text-align: center;
@@ -309,4 +318,91 @@ input[type="radio"] {
 .Category-selection button,
 .Question .category {
   text-transform: capitalize;
+}
+
+
+.Scoring-display ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.Scoring-display li {
+  font-size: 1.2em;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 1em;
+}
+
+.Scoring-display .scoring-name {
+  margin: 0 auto;
+}
+
+
+.score-slider {
+  -webkit-appearance: none;
+  background: rgba(255,255,255,.4);
+  border-radius: 3px;
+  height: 25px;
+  margin: 1em 0 2em;
+  opacity: .8;
+  outline: none;
+  transition: background .1s;
+  width: 100%;
+}
+  
+.score-slider:hover {
+  background: rgba(255,255,255,.5);
+}
+
+.score-slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  border: 1px solid white;
+  border-radius: 3px;
+  box-shadow: 0 0 10px 2px rgba(255,255,255,.4);
+  appearance: none;
+  width: 25px;
+  height: 25px;
+  background: rgba(255, 255, 255, .9);
+  cursor: pointer;
+  transition: background .2s;
+}
+
+.score-slider::-moz-range-thumb {
+  border: 1px solid white;
+  border-radius: 3px;
+  box-shadow: 0 0 10px 2px rgba(255,255,255,.7);
+  width: 25px;
+  height: 25px;
+  background: rgba(255, 255, 255, .9);
+  cursor: pointer;
+  transition: background .2s;
+}
+
+.score-slider.positive::-webkit-slider-thumb {
+  background: #1ac54e;
+}
+.score-slider.negative::-webkit-slider-thumb {
+  background: #f07373;
+}
+
+.scoring-name {
+  text-align: center;
+}
+
+.scores {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  color: rgba(255,255,255,.7);
+}
+  
+.scores span:nth-of-type(2) {
+  text-align: center;
+}
+.scores span:nth-of-type(3) {
+  text-align: right;
+}
+
+.Question button {
+  margin-top: 1em;
 }
